--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node": "^14.15.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
