--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
+    "express": "^4.16.4"
+  },
+  "engines": {
     "node": "^14.15.5"
   },
   "devDependencies": {
